--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
-CF_ACCOUNT_ID=
-CF_API_TOKEN_STREAM=
-CF_ACCESS_APP_AUD=
-CF_ACCESS_TEAM_NAME=
+CF_ACCOUNT_ID=FROM_URL_OF_YOUR_ACCOUNT_OR_STREAM_PAGE
+CF_API_TOKEN_STREAM=CREATE_IN_STREAM_USE_API_READ_WRITE_STREAM
+CF_ACCESS_APP_AUD=ZERO_TRUST_ACCESS_APP_AUDIENCE
+CF_ACCESS_TEAM_NAME=ACCESS_TEAM_NAME_FROM_SETTINGS
 CF_STREAM_SIGNING_KEY=
